RESOLVED FIXED66293
[EFL] Fix and update doxygen documentation for ewk_view
https://bugs.webkit.org/show_bug.cgi?id=66293
Summary [EFL] Fix and update doxygen documentation for ewk_view
Grzegorz Czajkowski
Reported 2011-08-16 05:26:19 PDT
This patch - fixes method descriptions, - adds briefs for structure and typdef, - removes dots from descriptions of parameter and return command (see EFL's documentation), - move includes and defines below a brief of ewk_view.h.
Attachments
proposed patch (95.94 KB, patch)
2011-08-16 05:31 PDT, Grzegorz Czajkowski
no flags
patch #1 (changes in ewk_view.cpp) (1.66 KB, patch)
2011-08-19 06:05 PDT, Grzegorz Czajkowski
no flags
patch #2 (changes in ewk_view.h) - typedefs and structs descriptions (11.28 KB, patch)
2011-08-19 06:16 PDT, Grzegorz Czajkowski
no flags
patch #3 (changes in ewk_view.h) - API descriptions part1 (40.20 KB, patch)
2011-08-19 06:18 PDT, Grzegorz Czajkowski
no flags
patch #4 (changes in ewk_view.h) - API descriptions part2 (45.01 KB, patch)
2011-08-19 06:18 PDT, Grzegorz Czajkowski
no flags
Grzegorz Czajkowski
Comment 1 2011-08-16 05:31:18 PDT
Created attachment 104029 [details] proposed patch
Leandro Pereira
Comment 2 2011-08-16 09:55:23 PDT
Could you please try splitting this into multiple patches?
Grzegorz Czajkowski
Comment 3 2011-08-17 02:16:31 PDT
(In reply to comment #2) > Could you please try splitting this into multiple patches? I agree with you that this patch is huge. What is your proposition to splitting this patch? What will you say about: patch #1 - changes in ewk_view.cpp + ChangeLog patch #2 - changes in ewk_view.h (typedefs and structs description) + ChangeLog patch #3 - API documentation part 1 + ChangeLog (ewk_view.h) patch #4 - API documentation part 2 (settings) + ChangeLog (ewk_view.h) These patches will be related with the same bug, they will have the same ChangeLog.
Leandro Pereira
Comment 4 2011-08-17 07:48:24 PDT
(In reply to comment #3) > (In reply to comment #2) > > Could you please try splitting this into multiple patches? > > I agree with you that this patch is huge. What is your proposition to splitting this patch? What will you say about: > > patch #1 - changes in ewk_view.cpp + ChangeLog > patch #2 - changes in ewk_view.h (typedefs and structs description) + ChangeLog > patch #3 - API documentation part 1 + ChangeLog (ewk_view.h) > patch #4 - API documentation part 2 (settings) + ChangeLog (ewk_view.h) > > These patches will be related with the same bug, they will have the same > ChangeLog. > Looks like a plan.
Grzegorz Czajkowski
Comment 5 2011-08-17 07:58:52 PDT
(In reply to comment #4) > (In reply to comment #3) > > (In reply to comment #2) > > > Could you please try splitting this into multiple patches? > > > > I agree with you that this patch is huge. What is your proposition to splitting this patch? What will you say about: > > > > patch #1 - changes in ewk_view.cpp + ChangeLog > > patch #2 - changes in ewk_view.h (typedefs and structs description) + ChangeLog > > patch #3 - API documentation part 1 + ChangeLog (ewk_view.h) > > patch #4 - API documentation part 2 (settings) + ChangeLog (ewk_view.h) > > > > These patches will be related with the same bug, they will have the same > > ChangeLog. > > > > Looks like a plan. It's only proposition :) I didn't split a patch into smaller ones before. I don't know what are general rules for that. Have you ever experienced similar case?
Gyuyoung Kim
Comment 6 2011-08-19 00:46:17 PDT
Hello Kent, First of all, sorry for adding CC. I have a question. Grzegorz refines descriptions of ewk_view's APIs. However, this patch is a little huge. I'm not sure if we should split this patch into smaller ones. Should this patch be splited into more smaller patches ?
Kent Tamura
Comment 7 2011-08-19 01:06:41 PDT
(In reply to comment #6) > Hello Kent, > > First of all, sorry for adding CC. I have a question. > > Grzegorz refines descriptions of ewk_view's APIs. However, this patch is a little huge. I'm not sure if we should split this patch into smaller ones. Should this patch be splited into more smaller patches ? We should reduce the patch size as possible in general. It seems we can split this patch easily.
Gyuyoung Kim
Comment 8 2011-08-19 01:35:18 PDT
(In reply to comment #7) > (In reply to comment #6) > > Hello Kent, > > > > First of all, sorry for adding CC. I have a question. > > > > Grzegorz refines descriptions of ewk_view's APIs. However, this patch is a little huge. I'm not sure if we should split this patch into smaller ones. Should this patch be splited into more smaller patches ? > > We should reduce the patch size as possible in general. > It seems we can split this patch easily. Ok, I will guide we should not make huge patch regardless patch is major or minor in future.
Grzegorz Czajkowski
Comment 9 2011-08-19 02:00:38 PDT
(In reply to comment #7) > (In reply to comment #6) > > Hello Kent, > > > > First of all, sorry for adding CC. I have a question. > > > > Grzegorz refines descriptions of ewk_view's APIs. However, this patch is a little huge. I'm not sure if we should split this patch into smaller ones. Should this patch be splited into more smaller patches ? > > We should reduce the patch size as possible in general. > It seems we can split this patch easily. Do you mean that I should split the patch into the few bugs? Or should I attach multiple patches to this bug? If second what to do with ChageLog? Does the same ChangeLog should be attached to each patch? (the most changes are included in ewk_view.h)
Kent Tamura
Comment 10 2011-08-19 02:17:22 PDT
(In reply to comment #9) > Do you mean that I should split the patch into the few bugs? Or should I attach multiple patches to this bug? If second what to do with ChageLog? Does the same ChangeLog should be attached to each patch? (the most changes are included in ewk_view.h) Both are ok. But many reviewers prefer one patch per one bug. Each patch should have its ChangeLog anyway.
Grzegorz Czajkowski
Comment 11 2011-08-19 06:05:42 PDT
Created attachment 104497 [details] patch #1 (changes in ewk_view.cpp)
Grzegorz Czajkowski
Comment 12 2011-08-19 06:16:07 PDT
Created attachment 104499 [details] patch #2 (changes in ewk_view.h) - typedefs and structs descriptions
Grzegorz Czajkowski
Comment 13 2011-08-19 06:18:09 PDT
Created attachment 104500 [details] patch #3 (changes in ewk_view.h) - API descriptions part1
Grzegorz Czajkowski
Comment 14 2011-08-19 06:18:54 PDT
Created attachment 104501 [details] patch #4 (changes in ewk_view.h) - API descriptions part2
WebKit Review Bot
Comment 15 2011-08-19 07:12:45 PDT
Comment on attachment 104497 [details] patch #1 (changes in ewk_view.cpp) Clearing flags on attachment: 104497 Committed r93401: <http://trac.webkit.org/changeset/93401>
WebKit Review Bot
Comment 16 2011-08-20 21:50:35 PDT
Comment on attachment 104499 [details] patch #2 (changes in ewk_view.h) - typedefs and structs descriptions Clearing flags on attachment: 104499 Committed r93485: <http://trac.webkit.org/changeset/93485>
WebKit Review Bot
Comment 17 2011-08-20 22:14:20 PDT
Comment on attachment 104500 [details] patch #3 (changes in ewk_view.h) - API descriptions part1 Clearing flags on attachment: 104500 Committed r93486: <http://trac.webkit.org/changeset/93486>
WebKit Review Bot
Comment 18 2011-08-20 22:27:55 PDT
Comment on attachment 104501 [details] patch #4 (changes in ewk_view.h) - API descriptions part2 Clearing flags on attachment: 104501 Committed r93488: <http://trac.webkit.org/changeset/93488>
WebKit Review Bot
Comment 19 2011-08-20 22:28:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.