[EFL] Fix and update doxygen documentation for ewk_view. https://bugs.webkit.org/show_bug.cgi?id=66293

Patch by Grzegorz Czajkowski <g.czajkowski@samsung.com> on 2011-08-19
Reviewed by Kent Tamura.

Adds doxygen documentation to the structures in ewk_view.cpp.

* ewk/ewk_view.cpp:

Canonical link: https://commits.webkit.org/82391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93401 268f45cc-cd09-0410-ab3c-d52691b4dbfc